<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment">

    <!-- add id TextView -->
    <TextView
        android:id="@+id/idDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/id_text"
        app:layout_constraintStart_toEndOf="@+id/imageDetail"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- add name TextView -->
    <TextView
        android:id="@+id/nameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/name_text"
        app:layout_constraintStart_toEndOf="@+id/imageDetail"
        app:layout_constraintTop_toBottomOf="@+id/idDetail" />

    <!-- add weight TextView -->
    <TextView
        android:id="@+id/weightDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/weight_text"
        app:layout_constraintStart_toEndOf="@+id/imageDetail"
        app:layout_constraintTop_toBottomOf="@+id/heightDetail" />

    <!-- add height TextView -->
    <TextView
        android:id="@+id/heightDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/height_text"
        app:layout_constraintStart_toEndOf="@+id/imageDetail"
        app:layout_constraintTop_toBottomOf="@+id/nameDetail" />

    <!-- add type TextView -->
    <TextView
        android:id="@+id/typeDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/type_text"
        app:layout_constraintStart_toEndOf="@+id/imageDetail"
        app:layout_constraintTop_toBottomOf="@+id/weightDetail" />

    <!-- add image ImageView -->
    <ImageView
        android:id="@+id/imageDetail"
        android:layout_width="130dp"
        android:layout_height="121dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/sprite" />

</androidx.constraintlayout.widget.ConstraintLayout>